<resources>
    <string name="app_name">Live Crypto Alert</string>
    <string name="action_settings">Settings</string>

    <string name="coins">Coins</string>
    <string name="library">Library</string>
    <string name="ico">ICO</string>
    <string name="news">News</string>
    <string name="share">Share</string>
    <string name="details">Details</string>
    <string name="market">Market</string>
    <string name="graph">Graph</string>
    <string name="live">Live</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="coins_total">Total: %d</string>

    <string name="empty_favorites">Sorry! There are no favourite coins.</string>
    <string name="empty_alerts">Sorry! There are no alerts.</string>
    <string name="loading_coins">Loading coins…</string>
    <string name="empty_coins">Sorry! There are no coins.</string>
    <string name="empty_news">No News! to see.</string>
    <string name="empty_live_ico">No Live ICO! right now.</string>
    <string name="empty_upcoming_ico">No Upcoming ICO! right now.</string>
    <string name="empty_finished_ico">No Finished ICO! right now.</string>
    <string name="refresh">Retry Syncing</string>
    <string name="favorite_coins">Favorite Coins</string>

    <string name="full_name">%s (%s)</string>
    <string name="time">Time</string>
    <string name="symbol">Symbol</string>
    <string name="price">Price</string>
    <string name="usd">USD</string>
    <string name="btc">BTC</string>
    <string name="volume_24h">Volume</string>
    <string name="market_cap">Market Cap</string>
    <string name="volume_24h_min">Vol</string>
    <string name="market_cap_min">Cap</string>
    <string name="circulating_supply">Circulating Supply</string>
    <string name="total_supply">Total Supply</string>
    <string name="max_supply">Max Supply</string>
    <string name="change">Change</string>
    <string name="change_1h">1H</string>
    <string name="change_24h">24H</string>
    <string name="change_7d">7D</string>
    <string name="coin_format">%s: (%s)</string>
    <string name="change_percent">%s%%</string>

    <string name="one_hour">1H</string>
    <string name="one_day">1D</string>
    <string name="three_day">3D</string>
    <string name="week">7D</string>
    <string name="month">1M</string>
    <string name="three_month">3M</string>
    <string name="six_month">6M</string>
    <string name="year">1Y</string>
    <string name="all">All</string>

    <string name="source">Source</string>
    <string name="more_graph">More Details</string>
    <string name="ico_live_time">Ending: %s</string>
    <string name="ico_upcoming_time">Starts: %s</string>
    <string name="ico_finished_time">Ended: %s</string>
    <string name="currency_exchange">Currency Exchanges</string>

    <string name="please_select">Please select</string>
    <string name="price_format">&#36;%1$.2f</string>
    <string name="market_cap_format">&#36;%1$,.2f</string>
    <string name="volume_format">&#36;%1$,.2f</string>
    <string name="negative_variable_pct_change_with_dollars_format">%2$.2f%% &#40;&#45;&#36;%3$.2f&#41;</string>
    <string name="positive_variable_pct_change_with_dollars_format">&#43;%2$.2f%% &#40;&#43;&#36;%3$.2f&#41;</string>

    <string name="positive_pct_change_format">&#43;%2$.2f%%</string>
    <string name="negative_pct_change_format">%2$.2f%%</string>
    <string name="not_available_pct_change_text_with_time">N/A</string>

    <string name="positive_pct_change_with_dollars_format">&#43;%1$.2f%% &#40;&#43;&#36;%2$.2f&#41;</string>
    <string name="negative_pct_change_with_dollars_format">%1$.2f%% &#40;&#45;&#36;%2$.2f&#41;</string>

<!--    <string name="positive_pct_format">&#43;%1$.2f%%</string>
    <string name="negative_pct_format">%1$.2f%%</string>-->
    <string name="positive_pct_format">&#43;%2.2f%%</string>
    <string name="negative_pct_format">%2.2f%%</string>

    <string name="Home">Home</string>
    <string name="CoinImage">Coin Image</string>
    <string name="AddCurrency">Add Currency</string>
    <string name="Favorite">Favorite</string>
    <string name="Refresh">Refresh</string>
    <string name="AllTime">All Time</string>
    <!--<string name="action_search">Search</string>-->
    <string name="noChartDataString">No Chart Data :(</string>
    <string name="notAvailableStringResource">N/A</string>
    <string name="nameAndSymbol">%1$s (%2$s)</string>
    <string name="volume24h">Volume24h: </string>

    <string name="basic_currency_format">%1$s %2$s</string>

    <string name="rounded_btc_format_no_space">\u0E3F%1$,.4f</string>
    <string name="rounded_btc_format">\u0E3F %1$,.4f</string>
    <string name="usd_format_no_space">&#36;%1$,.2f</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notify_title_profit">Hot Crypto Currency</string>
    <string name="notify_title_price_alert">Price Alert</string>
    <string name="notify_title_news">Crypto News</string>

    <string name="profitable_coins">Top %d profitable coins in market.</string>
    <string name="profitable_coin">Hot Coin: %s (%s) Price(%1$,.3f) Change(%2.2f%%).</string>
    <string name="profitable_coins_motto">Dear Sir, track the market prices of your favourite coins.</string>
    <string name="with_price">Price(%s)</string>
    <string name="with_change">Change(%s)</string>

    <string name="alert_coin">%s (%s) Price(&#36; %1$,.3f)</string>
<!--    <string name="alert_price_up"> > %.3f</string>
    <string name="alert_price_down"> %< %.3f</string>-->

    <string name="message_alert_saved">Saved price alert successfully.</string>
    <string name="message_select_alert">Please set at least one alert condition.</string>
    <string name="message_alert_same_price">Please set at least one alert condition.</string>
    <string name="error_price_up_input">Wrong price!</string>
    <string name="error_price_down_input">Wrong price!</string>

    <string name="select_currency">Select Currency</string>

</resources>
