<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="${relativePackage}.${activityClass}">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_change_1h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_format"
                android:textColor="@color/material_grey700"
                android:textSize="12sp"
                auto:fontFamily="@font/roboto_slab_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/one_hour"
                android:textColor="@color/material_grey700"
                android:textSize="12sp"
                auto:fontFamily="@font/roboto_slab_regular" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_change_24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_format"
                android:textColor="@color/material_grey700"
                android:textSize="12sp"
                auto:fontFamily="@font/roboto_slab_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/one_day"
                android:textColor="@color/material_grey700"
                android:textSize="12sp"
                auto:fontFamily="@font/roboto_slab_regular" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_change_7d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_format"
                android:textColor="@color/material_grey700"
                android:textSize="12sp"
                auto:fontFamily="@font/roboto_slab_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/week"
                android:textColor="@color/material_grey700"
                android:textSize="12sp"
                auto:fontFamily="@font/roboto_slab_regular" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_market_cap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd_format"
                android:textColor="@color/material_grey700"
                android:textSize="12sp"
                auto:fontFamily="@font/roboto_slab_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/market_cap_min"
                android:textColor="@color/material_grey800"
                android:textSize="12sp"
                auto:fontFamily="@font/roboto_slab_regular" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_volume_24h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd_format"
                android:textColor="@color/material_grey700"
                android:textSize="12sp"
                auto:fontFamily="@font/roboto_slab_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/volume_24h_min"
                android:textColor="@color/material_grey800"
                android:textSize="12sp"
                auto:fontFamily="@font/roboto_slab_regular" />

        </LinearLayout>

    </LinearLayout>
</layout>