<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="${relativePackage}.${activityClass}">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/image_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            auto:actualImageScaleType="centerCrop"
            auto:failureImage="@drawable/ic_error_primary_dark_24dp"
            auto:failureImageScaleType="centerInside"
            auto:layout_constraintBottom_toBottomOf="parent"
            auto:layout_constraintStart_toStartOf="parent"
            auto:layout_constraintTop_toTopOf="parent"
            auto:placeholderImage="@drawable/ic_coin"
            auto:placeholderImageScaleType="centerCrop"
            auto:roundAsCircle="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/symbol"
            android:textColor="@color/material_grey800"
            android:textSize="14sp"
            auto:layout_constraintStart_toEndOf="@id/image_icon"
            auto:layout_constraintTop_toTopOf="parent"
            auto:fontFamily="@font/roboto_slab_regular" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:text="@string/usd"
            android:textColor="@color/material_grey700"
            android:textSize="15sp"
            auto:layout_constraintStart_toEndOf="@id/image_icon"
            auto:layout_constraintTop_toBottomOf="@id/text_name"
            auto:fontFamily="@font/roboto_slab_bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_last_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_marginStart="15dp"
            android:text="@string/time"
            android:textColor="@color/material_grey800"
            auto:layout_constraintStart_toEndOf="@id/image_icon"
            auto:layout_constraintTop_toBottomOf="@id/text_price"
            auto:fontFamily="@font/roboto_slab_regular" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>